[package]
name = "impact-analyzer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "eia"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1.0"
semver = "1.0"
